--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/ycmjason/nist-randomness-test-suite/issues"
   },
-  "homepage": "https://github.com/ycmjason/nist-randomness-test-suite#readme"
+  "homepage": "https://github.com/ycmjason/nist-randomness-test-suite#readme",
+  "dependencies": {
+    "mathjs": "^3.13.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.4.1"
+  }
 }
